# fgddem-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
benches/: benchmark.rs
src/: dataset.rs  lib.rs  main.rs  rasterize.rs
tests/: cli.rs
tests/fixture/: FG-GML-5238-74-00-DEM5A-20161001.tif.aux.xml  FG-GML-5238-74-00-DEM5A-20161001.xml  FG-GML-6642-23-dem10b-20161001.tif.aux.xml
